# Lighthouse-Bulk-Scan

./: .gitignore  Dockerfile  README.md  auto_lighthouse.py  auto_lighthouse_1.py  auto_lighthouse_pypeteer.py  install_dependencies.sh  lighthouse_runner.py  lighthouse_summary.csv  main.py  package-lock.json  package.json  pyproject.toml  report_parser.py  requirements.txt  sitemap_parser.py
lighthouse_bulk_scan/: __init__.py  cli.py  report.py  runner.py  sitemap.py
tests/: test_utils.py
